javaDSL/src/test/resources/typeSystemTestModels/valid/expressions/MultiplicativeOps.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.expressions;

public class MultiplicativeOps {
//  double d = 1 * 1.2;
//  int n = 10/2;
//  char c = 'a';
  int m = 1 * 2;
  int mm = (m+1)*m;
}
