javaDSL/src/test/resources/typeSystemTestModels/invalid/fieldsAndLocalVars/MyClass.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.fieldsAndLocalVars;

public class MyClass<X> {
  <T> MyClass(T t) {


  }
}
